--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -12,3 +12,11 @@ $margen: 20px 20px 20px 20px;
   background-color: #eee;
   min-height: 100%;
 }
+
+.TextoCentrado{
+  text-align: center;
+}
+
+.TextoDerecha{
+  text-align:right;
+}
