--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Comuni</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header-tabs titulo="Comuni"> </app-header-tabs>
 
 <ion-content>
   <div class="container">
