--- a/src/app/pages/espacios/espacios.page.html
+++ b/src/app/pages/espacios/espacios.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Espacios</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header-tabs titulo="Espacios"> </app-header-tabs>
 
 <ion-content>
   <div class="margen">
