--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,12 +1,14 @@
 <ion-content padding>
     <img src="../../assets/logo.jpg">
+    <p class="TextoCentrado">Iniciar sesion</p>
   <ion-item>
     <ion-label position="floating"> email </ion-label>
     <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating"> Contraseña </ion-label>
-    <ion-input type="text" [(ngModel)]="password" name="password"></ion-input>
+    <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
   </ion-item>
   <ion-button (click)="onSubmitLogin()" expand="block"> Login </ion-button>
+  <p class="TextoDerecha" (click)="redirectRegistrarse()"> Registrarme </p>
 </ion-content>
