--- a/src/app/pages/mensajes/mensajes.page.html
+++ b/src/app/pages/mensajes/mensajes.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Mensajes</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header-tabs titulo="Mensajes"> </app-header-tabs>
 
 <ion-content>
   <div class="margen">
