--- a/src/app/components/header-tabs/header-tabs.component.html
+++ b/src/app/components/header-tabs/header-tabs.component.html
@@ -1,8 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>{{titulo}}</ion-title>
-    <ion-thumbnail (click)="onLogout()" slot="end" >
+    <ion-thumbnail (click)="mostrarHeaderListado()" slot="end" >
       <img src="../../../assets/icon/favicon.png">
     </ion-thumbnail>
   </ion-toolbar>
 </ion-header>
+<app-header-listado id="app-header-listado"></app-header-listado>
