tab header corregido

--- a/src/app/pages/configuracion/acerca-de/acerca-de.page.html
+++ b/src/app/pages/configuracion/acerca-de/acerca-de.page.html
@@ -1,9 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>acercaDe</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header-tabs titulo="Acerca De"></app-header-tabs>
 
 <ion-content>
-
+    <p>Nombre de la app: Comuni</p>
+    <p> Version de la app: 0.1</p>
 </ion-content>
