--- a/src/app/pages/configuracion/perfil-conf/perfil-conf.page.html
+++ b/src/app/pages/configuracion/perfil-conf/perfil-conf.page.html
@@ -1,9 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>perfil-conf</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content padding>
+  <p> Foto </p>
+  <p> Nombre</p>
+  <p> Apellido </p>
+  <p> Descripcion </p>
+  <p> Fecha de nacimiento </p>
+  <p> </p>
 </ion-content>
