--- a/src/app/pages/espacios/espacios.page.html
+++ b/src/app/pages/espacios/espacios.page.html
@@ -1,7 +1,7 @@
-<app-header-tabs titulo="Espacios"> </app-header-tabs>
-
 <ion-content>
-  <div class="margen">
-    <p> ASD </p>
+  <div class="container">
+    <div class="margen">
+      <p> ASD </p>
+    </div>
   </div>
 </ion-content>
