--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,20 +1,21 @@
+<app-header-tabs titulo={{tituloHeader}}></app-header-tabs>
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button tab="home">
+    <ion-tab-button (click)="cambiarTitulo('Comuni')" tab="home">
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="espacios">
+    <ion-tab-button (click)="cambiarTitulo('Espacios')" tab="espacios">
       <ion-icon name="apps"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="mensajes">
+    <ion-tab-button (click)="cambiarTitulo('Mensajes')" tab="mensajes">
       <ion-icon name="send"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="notificaciones">
+    <ion-tab-button (click)="cambiarTitulo('Notificaciones')" tab="notificaciones">
       <ion-icon name="notifications"></ion-icon>
     </ion-tab-button>
 
